[package]
name = "multichannel"
version = "0.2.0"
edition = "2021"
authors = ["Alexdesander"]
license = "MIT OR Apache-2.0"
description = "A mpmc priority multi channel with dynamic channel registration and freezing."
repository = "https://github.com/alexdesander/multichannel"
readme = "README.md"
keywords = ["sync", "channel", "multithreading", "concurrency"]
categories = ["concurrency"]
exclude = [
    "logo.png"
]

[dependencies]
ahash = "0.8.11"
crossbeam-channel = "0.5.12"
crossbeam-utils = "0.8.19"
itertools = "0.12.1"
rand = { version = "0.8.5", features = ["small_rng"] }
smallvec = { version = "1.13.2", features = ["union"] }
thiserror = "1.0.59"
